--- a/src/main/webapp/hello.html
+++ b/src/main/webapp/hello.html
@@ -7,6 +7,6 @@
 <body>
 <p th:text="'Hello, ' + ${name} + '!'" />
 
-hello
+hello, This is static page. not resolve by server, just the html.
 </body>
 </html>
