--- a/src/main/webapp/ajax/info.html
+++ b/src/main/webapp/ajax/info.html
@@ -54,6 +54,7 @@
     }
 ]
     </pre>
+    <a href="photo.html">photo</a>
     <table border="1px solid" id="user_list">
         <tr>
             <th>用户名</th>
