--- a/src/main/webapp/ajax/info.html
+++ b/src/main/webapp/ajax/info.html
@@ -29,7 +29,7 @@ width: 500px; height: 800px; display: none;position: absolute;
     但实际上，我们的数据都是存放到数据库的，然后请求数据库的数据，填充到网页。
 </div>
 <div>
-    这里是一个简单的例子，使用jquery的ajax方法：<br/>
+    这里是一个简单的例子，1使用jquery的ajax方法：<br/>
     我想要获取所有用户信息并输入到table中。获取所有数据的方法是浏览器访问：
     http://localhost:8080/userList。你现在浏览器输入http://localhost:8080/userList，
     然后看看得到的响应结果。应该是这样的：
