--- a/src/main/webapp/ajax/info.html
+++ b/src/main/webapp/ajax/info.html
@@ -21,6 +21,19 @@ width: 500px; height: 800px; display: none;position: absolute;
         </tr>
     </table>
 </div>
+
+<div>
+
+    <ul>
+        <li><a href="/ajax/info.html">ajax</a></li>
+        <li><a href="/ajax/photo.html">photo</a></li>
+        <li><a href="/ajax/js-base.html">js-base</a></li>
+        <li><a href="/ajax/jq-base.html">jq-base</a></li>
+    </ul>
+</div>
+
+
+
 <h1>This is tell how ajax work!</h1>
 <img src="/images/ajax.png">
 <div>
@@ -170,24 +183,18 @@ width: 500px; height: 800px; display: none;position: absolute;
         }
         function del(uid){
             if (confirm("真的要删除吗？")){
-                console.log(uid)
-                console.log("dele_"+uid)
-                $("#dele_"+uid).remove()
                 $.ajax({
                     url: "http://localhost:8080/user/deleteUser",
                     type: "post",
                     dataType: "json",
                     data:{id:uid},
                     success: function (data) {
-                        //data数据
-                        console.log(data.status)
                         if(data.status==200){
+                            $("#dele_"+uid).remove();
                             alert("success!!!")
                         }else{
                             alert("failed:"+data.msg);
                         }
-
-
                     },
                     error:function (data) {
                         console.log(data)
@@ -196,7 +203,6 @@ width: 500px; height: 800px; display: none;position: absolute;
                 });
             }
 
-//            $("#dele").remove()
         }
     </script>
 
